welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: value =< is not a member of Int
	if(((a>=10) && (a=<20)) && !((b>=10) && (b=<20))) {
                         ^max1020:5: error: value =< is not a member of Int
	if(!(a>=10 && a=<20) && (b>=10 && b=<20)) {
                       ^max1020:8: error: value =< is not a member of Int
	if((a>=10 && a=<20) && (b>=10 && b=<20)) {
                      ^